changes with back end

--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -41,7 +41,7 @@
             <div>
                 <mat-form-field>
                     <mat-label> Password </mat-label>
-                    <input formControlName="password" matInput type="password" placeholder="Min. 8 characters">
+                    <input formControlName="password" matInput type="password">
                 </mat-form-field>  
             </div>
             <button [disabled]="signupForm.invalid" mat-flat-button type="submit" class="w-full"> Sign Up </button>
