--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -5,7 +5,7 @@
                 <input formControlName="title" matInput placeholder="Add To-do here">
             </mat-form-field>
 
-            <button mat-fab [type="submit"]> <!-- fab: floating action button-->
+            <button mat-fab type="submit"> <!-- fab: floating action button-->
                 <mat-icon>add</mat-icon>
             </button>
         </div>
