--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,12 @@
 <div class="flex h-full bg-gray-100 items-center justify-center" id="full-cover-background">
     <div id="centered-block" class="bg-white p-6 rounded-xl shadow-md">
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()"> <!-- form[type]relie ici avec fichier login.ts-->
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()"> 
             <h2 class="text-center">Login</h2>
             <div id="email-container">
                 <mat-form-field>
                     <mat-label>Email</mat-label>
                     <input matInput formControlName="username" type="email" placeholder="Email" />
-                </mat-form-field>    <!--formControlName reprend l'attribut de loginForm dans login.ts-->
+                </mat-form-field>   
             </div>
 
             <div id="password-container">
@@ -18,6 +18,10 @@
             <button mat-flat-button type="submit" class="w-full">
                 Log In
             </button>
+            <button mat-flat-button type="button" routerLink="/signup" class="w-full">
+                Sign In
+            </button>
+            
         </form>
     </div>
 </div>
