--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,14 @@
    <mat-sidenav #sidenav mode="side" > <!--- variable template #id réutilisé ds fct click --->
       <!--- bleu clair: directive ou ppté=: comportement: va sur coté et fixe sur tte la hauteur de l'écran--->
       <mat-nav-list>
-         <a mat-list-item routerLink="">Home</a> <!-- routerLink: single page application, reste dans la même page # href qui change de page-->
+         <a mat-list-item routerLink="">Home - list</a> <!-- routerLink: single page application, reste dans la même page # href qui change de page-->
+         <a mat-list-item routerLink="/login">Login</a>
          <a mat-list-item routerLink="/todo-table">Table of Todo list</a>
          <a mat-list-item routerLink="/dashboard">Dashboard</a>
-         <a mat-list-item routerLink="/login">Login</a>
          <a mat-list-item routerLink="/sign-up">Sign Up</a>
          <a mat-list-item routerLink="/user">User List</a>
          <a mat-list-item routerLink="/profil">Profil</a>
+         <a mat-list-item (click)="logout()">Log out</a>
       </mat-nav-list>
    </mat-sidenav>
 
