add signup button

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,12 @@
 <div class="flex h-full bg-gray-100 items-center justify-center" id="full-cover-background">
     <div id="centered-block" class="bg-white p-6 rounded-xl shadow-md">
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()"> 
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <h2 class="text-center">Login</h2>
             <div id="email-container">
                 <mat-form-field>
                     <mat-label>Email</mat-label>
                     <input matInput formControlName="username" type="email" placeholder="Email" />
-                </mat-form-field>   
+                </mat-form-field>
             </div>
 
             <div id="password-container">
@@ -15,13 +15,16 @@
                     <input matInput formControlName="password" type="password" placeholder="Password">
                 </mat-form-field>
             </div>
-            <button mat-flat-button type="submit" class="w-full">
-                Log In
-            </button>
-            <button mat-flat-button type="button" routerLink="/signup" class="w-full">
-                Sign In
-            </button>
-            
+
+            <div class="flex gap-4">
+                <button mat-flat-button type="submit" class="w-full">
+                    Log In
+                </button>
+                <button mat-flat-button type="button" routerLink="/sign-up" class="w-full">
+                    Sign In
+                </button>
+            </div>
+
         </form>
     </div>
 </div>
