--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,30 +3,30 @@
    <mat-sidenav #sidenav mode="side" > <!--- variable template #id réutilisé ds fct click --->
       <!--- bleu clair: directive ou ppté=: comportement: va sur coté et fixe sur tte la hauteur de l'écran--->
       <mat-nav-list>
-         <a mat-list-item routerLink="">Home - list</a> <!-- routerLink: single page application, reste dans la même page # href qui change de page-->
-         <a mat-list-item routerLink="/login">Login</a>
+         <a mat-list-item routerLink="">  Home - list</a>
+         <a mat-list-item routerLink="/login"> Login</a>
+         <a mat-list-item routerLink="/sign-up">Register</a>
          <a mat-list-item routerLink="/todo-table">Table of Todo list</a>
          <a mat-list-item routerLink="/dashboard">Dashboard</a>
-         <a mat-list-item routerLink="/sign-up">Sign Up</a>
          <a mat-list-item routerLink="/user">User List</a>
          <a mat-list-item routerLink="/profil">Profil</a>
-         <a mat-list-item (click)="logout()">Log out</a>
+         <a mat-list-item (click)="logout()">Log out<span *ngIf="user">&nbsp;<strong>: {{ user.username }}</strong></span></a>
       </mat-nav-list>
    </mat-sidenav>
 
    <mat-sidenav-content>
-      <div class="flex flex-col h-screen"> <!-- flex et en colonnes et prend tte la hauteur de l'écran-->
+      <div class="flex flex-col h-screen">
          <div id="div-toolbar">
             <mat-toolbar>
-               <button mat-icon-button (click)="sidenav.toggle()"> <!--- syntax "on click" devient (click)=""--->
+               <button mat-icon-button (click)="sidenav.toggle()">
                   <mat-icon>menu</mat-icon>
                </button>
                <span>
-                  {{title}} <!-- title dans app.component.ts -->
+                  {{title}} 
                </span>
             </mat-toolbar>
          </div>
-         <div id="div-router" class="flex-1"> <!-- flex 1: prend tt l'espace disponible-->
+         <div id="div-router" class="flex-1"> 
             <router-outlet /> <!--- tt ce qu'il y a avant router/outlet est visible--->
          </div>
       </div>
