--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -5,7 +5,7 @@
             <mat-form-field class="flex-1">
                 <input formControlName="nom" matInput placeholder="Add id, last name, first name and gender">  
             </mat-form-field>
-            <button mat-fab type="submit"> <!-- fab: floating action button-->
+            <button mat-fab type="submit"> 
                 <mat-icon>add</mat-icon>
             </button>
         </div>
