--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,13 @@
       <!--- bleu clair: directive ou ppté=: comportement: va sur coté et fixe sur tte la hauteur de l'écran--->
       <mat-nav-list>
          <a mat-list-item routerLink="">  Home - list</a>
-         <a mat-list-item routerLink="/login"> Login</a>
-         <a mat-list-item routerLink="/sign-up">Register</a>
+         <a mat-list-item routerLink="/login">Login</a>
+         <a mat-list-item routerLink="/sign-up">Sign Up</a>
          <a mat-list-item routerLink="/todo-table">Table of Todo list</a>
          <a mat-list-item routerLink="/dashboard">Dashboard</a>
-         <a mat-list-item routerLink="/user">User List</a>
+          @if(authService.isAdmin) {
+            <a mat-list-item routerLink="/user">User List</a>
+          }
          <a mat-list-item routerLink="/profil">Profil</a>
          <a mat-list-item (click)="logout()">Log out<span *ngIf="user">&nbsp;<strong>: {{ user.username }}</strong></span></a>
       </mat-nav-list>
