--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
 
             <div id="email-container">
                 <mat-form-field class=" w-full">
-                    <mat-label>Email</mat-label>
+                    <mat-label>Username</mat-label>
                     <input matInput formControlName="username" type="email" placeholder="ex:xxxx@gmail.com" />
                 </mat-form-field>
             </div>
@@ -18,14 +18,15 @@
                 </mat-form-field>
             </div>
 
-            <div *ngIf="loginForm.hasError('credentialsMismatch')"
-                class="text-red-500 text-sm mt-2 mb-2">
+            <div *ngIf="loginForm.hasError('credentialsMismatch')" class="text-red-500 text-sm mt-2 mb-2">
                 Username / password do not match.
             </div>
 
-            <span> You don't have an account? Click here to
-                <a routerLink="/sign-up" style="text-decoration: none; color: inherit;"><strong> register
-                    </strong></a></span>
+            <span> Not registered yet? Click
+                <a routerLink="/sign-up" style="text-decoration: none; color: inherit;">
+                    <strong> here </strong>
+                </a>
+            </span>
             <div class="flex m-4 justify-center">
                 <button mat-flat-button type="submit">Log In </button>
             </div>
