--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -7,13 +7,13 @@
             <div>
                 <mat-form-field class=" w-full">
                     <mat-label> Last Name </mat-label>
-                    <input formControlName="lastname" matInput type="text">
+                    <input formControlName="lastName" matInput type="text">
                 </mat-form-field>
             </div>
             <div>
                 <mat-form-field class=" w-full">
                     <mat-label> First Name </mat-label>
-                    <input formControlName="firstname" matInput type="text">
+                    <input formControlName="firstName" matInput type="text">
                 </mat-form-field>
             </div>
             <div>
@@ -30,14 +30,15 @@
                 <mat-form-field class=" w-full">
                     <mat-label> Login User </mat-label>
                     <input formControlName="email" matInput type="email" placeholder="Enter your email"
-                     pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}">
+                        pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}">
                 </mat-form-field>
             </div>
+
             <div>
                 <mat-form-field class="w-full">
                     <mat-label>Password</mat-label>
                     <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password"
-                        placeholder="Min. 8 characters" > <!-- pattern="/^[a-zA-Z0-9!@#\$%\^\&*_=+-]{8,12}$/g" -->
+                        placeholder="Min. 8 characters"> <!-- pattern="/^[a-zA-Z0-9!@#\$%\^\&*_=+-]{8,12}$/g" -->
                     <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword"
                         [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
                         <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
@@ -55,11 +56,13 @@
                 class="text-red-500 text-sm mt-2 mb-2">
                 Passwords do not match.
             </div>
-
+            <div *ngIf="errorMessage" class="error-message text-red-500 text-sm mt-2 mb-2">
+                {{ errorMessage }}
+            </div>
             <span>All (*) are required</span>
 
             <button [disabled]="signupForm.invalid" mat-flat-button type="submit" class="w-full m-4"> Sign Up </button>
-            
+
         </form>
     </div>
 </div>
