--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,20 @@
 <mat-sidenav-container>
    <!--- tt ce qu'il y a dans sidenav est caché --->
-   <mat-sidenav #sidenav mode="side" > <!--- variable template #id réutilisé ds fct click --->
+   <mat-sidenav #sidenav mode="side"> <!--- variable template #id réutilisé ds fct click --->
       <!--- bleu clair: directive ou ppté=: comportement: va sur coté et fixe sur tte la hauteur de l'écran--->
       <mat-nav-list>
-         <a mat-list-item routerLink="">  Home - list</a>
+         <a mat-list-item routerLink=""> Home - list</a>
          <a mat-list-item routerLink="/login">Login</a>
          <a mat-list-item routerLink="/sign-up">Sign Up</a>
          <a mat-list-item routerLink="/todo-table">Table of Todo list</a>
          <a mat-list-item routerLink="/dashboard">Dashboard</a>
-          @if(authService.isAdmin) {
-            <a mat-list-item routerLink="/user">User List</a>
-          }
+         @if(authService.isAdmin) {
+         <a mat-list-item routerLink="/user-list">User List</a>
+         }
          <a mat-list-item routerLink="/profil">Profil</a>
-         <a mat-list-item (click)="logout()">Log out<span *ngIf="user">&nbsp;<strong>: {{ user.username }}</strong></span></a>
+         <a mat-list-item *ngIf="authService.currentUser$ | async as currentUser" (click)="logoutButton()">
+            Log out&nbsp;<strong>: {{ currentUser.username }}</strong>
+         </a>
       </mat-nav-list>
    </mat-sidenav>
 
@@ -24,15 +26,15 @@
                   <mat-icon>menu</mat-icon>
                </button>
                <span>
-                  {{title}} 
+                  {{title}}
                </span>
             </mat-toolbar>
          </div>
-         <div id="div-router" class="flex-1"> 
+         <div id="div-router" class="flex-1">
             <router-outlet /> <!--- tt ce qu'il y a avant router/outlet est visible--->
          </div>
       </div>
 
-      
+
    </mat-sidenav-content>
 </mat-sidenav-container>
