--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,15 +1,5 @@
 
 <mat-card class="h-full flex flex-col">
-    <form [formGroup]="formGroup" (ngSubmit)="onAddUser()">
-        <div id="barre-saisie" class="flex gap-5 m-6">
-            <mat-form-field class="flex-1" appearance="outline">
-                <input formControlName="username" matInput placeholder="Add username (email)">  
-            </mat-form-field>
-            <button mat-fab type="submit"> 
-                <mat-icon>add</mat-icon>
-            </button>
-        </div>
-    </form>
 
     <div id="users-list" >
        <mat-list>
@@ -17,7 +7,7 @@
             <mat-list-item>
                 <div class="flex items-center">
                     <span [routerLink]="['/user-detail', user.id]" class="flex-1 cursor-pointer">{{user.username}}</span>
-                    <button mat-icon-button (click)="onRemoveUser(user.id)">
+                    <button mat-icon-button (click)="onRemoveUser(user)">
                         <mat-icon>delete_forever</mat-icon>
                     </button>
                 </div>
