--- a/src/app/components/delete-task-dialog/delete-task-dialog.component.html
+++ b/src/app/components/delete-task-dialog/delete-task-dialog.component.html
@@ -1,6 +1,6 @@
-<h2 mat-dialog-title> Delete User </h2>
+<h2 mat-dialog-title> Delete Task </h2>
 <mat-dialog-content>
-   Are you sure you want to delete user : <strong>{{data.username}}</strong> ?'
+   Are you sure you want to delete this task : <strong> {{data.todo}} </strong>? 
 </mat-dialog-content>
 <mat-dialog-actions>
     <button mat-button mat-dialog-close (click)="onConfirm()">Yes</button>
